# api/v1/agent/models/ipam_del_args.go
@@ -40,6 +40,10 @@ type IpamDelArgs struct {
 	// pod namespace
 	// Required: true
 	PodNamespace *string `json:"podNamespace"`
+
+	// pod UID
+	// Required: true
+	PodUID *string `json:"podUID"`
 }
 
 // Validate validates this ipam del args
@@ -59,6 +63,10 @@ func (m *IpamDelArgs) Validate(formats strfmt.Registry) error {
 	}
 
 	if err := m.validatePodNamespace(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePodUID(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -98,6 +106,15 @@ func (m *IpamDelArgs) validatePodName(formats strfmt.Registry) error {
 func (m *IpamDelArgs) validatePodNamespace(formats strfmt.Registry) error {
 
 	if err := validate.Required("podNamespace", "body", m.PodNamespace); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *IpamDelArgs) validatePodUID(formats strfmt.Registry) error {
+
+	if err := validate.Required("podUID", "body", m.PodUID); err != nil {
 		return err
 	}
 
